Closed Bug 1903090 Opened 1 year ago Closed 1 year ago

Incorrect "unread" icon for threaded replies

Categories

(Thunderbird :: Folder and Message Lists, defect, P2)

defect

Tracking

(thunderbird128? verified)

VERIFIED FIXED
129 Branch
Tracking Status
thunderbird128 ? verified

People

(Reporter: aleca, Assigned: aleca)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

When marking the parent message of a thread as "unread" also the "replies" button shows the unread icon even if no unread child messages are present.

This seems to be a problem coming from C++ properties which append the hasUnread property without distinguishing if the "child" message of a thread is the actual root message.

Assignee: nobody → alessandro
Status: NEW → ASSIGNED
Attachment #9408300 - Attachment description: Bug 1903090 - Don't mark a message with hasUnread if only the parent message is unread. r=#thunderbird-reviewers → Bug 1903090 - Don't mark a message with hasUnread or hasNew if only the parent message is unread/new. r=#thunderbird-reviewers
Target Milestone: --- → 129 Branch
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

Comment on attachment 9408300 [details]
Bug 1903090 - Don't mark a message with hasUnread or hasNew if only the parent message is unread/new. r=#thunderbird-reviewers

[Approval Request Comment]
Regression caused by (bug #): -
User impact if declined: small visual inconsistency showing both parent and child messages in a thread marked as unread/new even if they're not.
Testing completed (on c-c, etc.): on c-c
Risk to taking this patch (and alternatives if risky): low, and it also comes with automated tests

Attachment #9408300 - Flags: approval-comm-beta?

Comment on attachment 9408300 [details]
Bug 1903090 - Don't mark a message with hasUnread or hasNew if only the parent message is unread/new. r=#thunderbird-reviewers

[Triage Comment]
Approved for beta

Attachment #9408300 - Flags: approval-comm-beta? → approval-comm-beta+

Confirming this issue as verified fixed for 128.0b4(20240624182435) with Win 10&11 and macOS 14.

Status: RESOLVED → VERIFIED
Target Milestone: 129 Branch → 128 Branch

This was fixed on nightly first, so target milestone 129 was correct.
When confirming uplifts, you will want to use the flags, in this case "verified" for "thunderbird128"

Target Milestone: 128 Branch → 129 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: