Bug 1903090 - Don't mark a message with hasUnread or hasNew if only the parent message is unread/new. r=mkmelin

#### How to test

- Have a threaded message and expand it.
- Mark the parent message as **unread**.
  - Ensure the "Replies" button in the parent message doesn't show the unread indicator.
- Mark the parent message as **read**.
- Mark a child message as **unread**.
  - Ensure the "Replies" button in the parent message shows the unread indicator.
  - Ensure the parent message doesn't get styled as unread.

In cards view is more visually obvious but it also matches the logic for table view.
Child unread in table view are represented with an underline style on the parent message.

Differential Revision: https://phabricator.services.mozilla.com/D214186

--HG--
extra : moz-landing-system : lando